# drugs_availability

./: README.md  main.py  pyproject.toml  requirements.txt
app/: api_requests.py  db.py  main.py  models.py  utils.py
app/api/: api_requests.py  db.py  models.py  utils.py
app/api/data/: drugs.db
app/bot/: handlers.py  keyboards.py  utils.py
app/data/: drugs.db
bot/: bot.py  handlers.py  keyboards.py
parse/parse/spiders/: drugs_spider.py
parse/scraper/: items.py  settings.py
parse/scraper/spiders/: drugs_spider.py
parser/: db.py  main.py  models.py  parser_spb.py  utils.py
parser/data/: drugs.db
requests/: main.py  models.py  utils.py
